--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,24 @@ nav {
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
+
+@media only screen and (max-width: 600px) {
+  .small-device{
+   display :flex;
+  flex-direction: column;
+  align-items: center;
+  }
+}
+  
+@media (min-width: 600px) and (max-width: 1300px) {
+  .small-device{
+   display :flex;
+   flex-wrap: wrap;
+   justify-content: center;
+  
+  
+  }
+}
+
+
+
